# varden

./: .gitattributes  .gitignore  AUTHORS  CODEOWNERS  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK.md  app_factory.py  package-lock.json  patch.py  pyproject.toml  sentinel_alerts.jsonl  test_policy.json
.github/: dependabot.yml
.github/workflows/: ci.yml  mcp-conformance.yml
arbiter/: __init__.py  sdk.py
arbiter_langchain/: __init__.py
demos/: README.md  __init__.py  allowed_safe_agent.py  blocked_tool_agent.py  database_sql_agent.py  flagged_data_agent.py  monitor_rule_agent.py  token_budget_agent.py
demos/langchain/: README.md  allow_warn_block_demo.py  common.py  exfiltration_demo.py  sql_guard_demo.py
deploy/: docker-compose.yml  operations.md  self_hosting.md
deploy/config/: prod.env
depocalypse-report/: badges.json  classification.json  index.html
docs/: LANDING_PAGE_COPY.md  langchain.md  policy-packs-update-spec.md  token-budget-plan.md  web-shield-architecture.md  web-shield-evaluation.md  web-shield-extension-security.md  web-shield-extension.md  web-shield-hardening-review.md  web-shield-limitations.md  web-shield-policy.md  web-shield-privacy.md  web-shield-release-gate.md  web-shield-sdk.md  web-shield-security.md  web-shield-threat-model.md  web-shield.md
examples/: dev.env
examples/python/: protect_example.py
extension/: manifest.json
extension/src/: background.js  content-isolated.js  fallback-rules.js  options.html  options.js  page-world.js  popup.css  popup.html  popup.js  protocol.js
extension/test/: protocol.test.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/lib/: format.ts  policy.ts  routing.ts  types.ts
frontend/src/styles/: app.css
policy-packs/: README.md  agent-prompt-injection.json  baseline-operational-safety.json  credential-and-identity-abuse.json  database-safety.json  deployment-cli-safety.json  destructive-tools-and-infra.json  excessive-agency-and-workflow-escalation.json  host-shell-safety.json  llm-cost-governance.json  mcp-server-safety.json  monitoring-foundation.json  network-egress-and-tunnels.json  sensitive-data-exfiltration.json  supply-chain-and-ci-integrity.json  webmcp-web-shield.json
scripts/: github-ruleset-main.json  run_local.sh  run_worker.sh  webshield-release-smoke.sh
sdks/java/: README.md  pom.xml
sdks/java/examples/: BlockedDemo.java
sdks/js/web-shield/: README.md  package-lock.json  package.json
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/varden/: __init__.py  sdk.py
sdks/python/varden_sdk/: sdk.py
sdks/rust/: Cargo.toml  LICENSE  README.md
sdks/rust/examples/: blocked_demo.rs
sdks/rust/src/: lib.rs
sentinel/: __init__.py  api.py  app_factory.py  blaze.py  classification.py  cli.py  config.py  db.py  health.py  idempotency.py  langchain.py  metrics.py  models.py  policy.py  queue.py  ratelimit.py  redaction.py  sdk.py  stores.py  worker_runtime.py
sentinel/web/: dashboard.html  rules.html
sentinel/web/app/: index.html
sentinel_langchain/: __init__.py  integration.py
sentinel_sdk/: __init__.py  sdk.py
tests/: test_api_behaviour.py  test_body_size_limits.py  test_budget_policy_ui.py  test_demo_scripts.py  test_hardening_fixes.py  test_idempotency.py  test_langchain_docs_and_demos.py  test_langchain_integration.py  test_mcp_inventory.py  test_mcp_server.py  test_new_features.py  test_oss_boundaries.py  test_policy_pack_import.py  test_policy_packs.py  test_sdk.py  test_session_parse.py  test_smoke.py  test_sql_policy_pack.py  test_token_budget.py  test_ui_shell.py  test_varden_monitor.py  test_webshield_adversarial.py  test_webshield_api.py  test_webshield_demo_and_lab.py  test_webshield_engine.py  test_webshield_fuzz.py  test_webshield_sanitize.py
tests/integration/: test_api_placeholder.py
tests/mcp/: varden_functional.suite.json  varden_put_policy.suite.json
varden/: __init__.py  alerts.py  api.py  app_factory.py  auth.py  cli.py  config.py  db.py  exceptions.py  export.py  fsutil.py  idempotency.py  intelligence.py  langchain.py  mcp_inventory.py  metrics.py  middleware.py  policy.py  policy_packs.py  redaction.py  sdk.py  stores.py  token_budget.py  worker_service.py
varden/rules/: __init__.py  registry.py  token_budget.py
varden/web/: dashboard.html  rules.html  webshield-lab.html
varden/webshield/: __init__.py  cli.py  corpus.py  demo.py  engine.py  evaluate.py  extension_build.py  models.py  risk.py  routes.py  sanitize.py  store.py  textfields.py  trust_cli.py
varden_langchain/: __init__.py  integration.py
varden_mcp/: README.md  __init__.py  _client.py  server.py
varden_monitor/: LICENSE  README.md  SCHEMA.md  __init__.py  cli.py  payload.py  protect_run.py  session.py  shim_runner.py
varden_sdk/: __init__.py  sdk.py
(+54 files in other folders)
