[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varden-integrated-platform"
version = "3.0.0"
description = "Production Varden platform with control plane and multi-language SDKs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "PyJWT>=2.8",
  "psycopg[binary]>=3.1"
]

[tool.setuptools.packages.find]
include = ["varden*", "varden_sdk*", "varden_langchain*"]


[tool.setuptools.package-data]
"varden" = ["web/**/*"]


[project.scripts]
varden = "varden.cli:main"


[project.optional-dependencies]
langchain = [
  "langchain>=0.2",
  "langchain-core>=0.2"
]
