[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varden"
version = "3.0.0"
description = "Production Varden platform with control plane and multi-language SDKs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "PyJWT>=2.8",
  "psycopg[binary]>=3.1"
]

[project.urls]
Homepage = "https://github.com/markndg/varden"
Repository = "https://github.com/markndg/varden"
Issues = "https://github.com/markndg/varden/issues"
Changelog = "https://github.com/markndg/varden/commits/main"

[tool.setuptools.packages.find]
include = ["varden*", "varden_sdk*", "varden_langchain*", "varden_monitor*", "varden_mcp*"]


[tool.setuptools.package-data]
"varden" = ["web/**/*"]


[project.scripts]
varden = "varden.cli:main"
varden-monitor = "varden_monitor.cli:main"
varden-session = "varden_monitor.session:main"
varden-mcp = "varden_mcp.server:main"


[project.optional-dependencies]
langchain = [
  "langchain>=0.2",
  "langchain-core>=0.2"
]
mcp = [
  "mcp[cli]>=1.2",
  "httpx>=0.27",
]
test = [
  "pytest>=8",
]
