[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varden"
version = "0.2.0"
description = "A self-hosted runtime firewall for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Mark Griffiths" }
]
keywords = [
  "ai", "agents", "llm", "security", "firewall",
  "observability", "runtime", "guardrails", "policy"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "PyJWT>=2.8",
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.1",
]
langchain = [
  "langchain>=0.2",
  "langchain-core>=0.2",
]
mcp = [
  "mcp[cli]>=1.2",
  "httpx>=0.27",
]
test = [
  "pytest>=8",
  "mcp[cli]>=1.2",
  "hypothesis>=6.100",
]
all = [
  "psycopg[binary]>=3.1",
  "langchain>=0.2",
  "langchain-core>=0.2",
  "mcp[cli]>=1.2",
]

[project.urls]
Homepage = "https://github.com/markndg/varden"
Repository = "https://github.com/markndg/varden"
Issues = "https://github.com/markndg/varden/issues"
Changelog = "https://github.com/markndg/varden/commits/main"

[project.scripts]
varden = "varden.cli:main"
varden-monitor = "varden_monitor.cli:main"
varden-session = "varden_monitor.session:main"
varden-mcp = "varden_mcp.server:main"

[tool.setuptools.packages.find]
include = ["varden*", "varden_sdk*", "varden_langchain*", "varden_monitor*", "varden_mcp*"]

[tool.setuptools.package-data]
"varden" = ["web/**/*", "policy-packs/*.json", "webshield/corpus/*.json"]