[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Sentinel Rust SDK"

[dependencies]
once_cell = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
